--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,23 @@
 
     <Button
         android:id="@+id/btn4"
-        android:layout_width="145dp"
-        android:layout_height="108dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_below="@+id/btn2"
+        android:layout_marginBottom="24dp"
         android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/btn"
         android:onClick="goToBit"
         android:text="About Us"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn3"
         app:layout_constraintStart_toStartOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/btn3" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="198dp"
+        android:layout_height="167dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="8dp"
@@ -35,41 +37,49 @@
 
     <Button
         android:id="@+id/btn"
-        android:layout_width="145dp"
-        android:layout_height="108dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignStart="@+id/btn2"
         android:layout_below="@+id/btn2"
+        android:layout_marginBottom="24dp"
         android:layout_marginTop="8dp"
         android:onClick="goToBit"
         android:text="Crypto wallet"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn2"
         app:layout_constraintStart_toStartOf="@+id/btn2"
         app:layout_constraintTop_toBottomOf="@+id/btn2" />
 
     <Button
         android:id="@+id/btn3"
-        android:layout_width="145dp"
-        android:layout_height="108dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignTop="@+id/btn2"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_toEndOf="@+id/btn2"
         android:onClick="goToBit"
         android:text="Crypto converter"
+        app:layout_constraintBottom_toTopOf="@+id/btn4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn2"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <Button
         android:id="@+id/btn2"
-        android:layout_width="145dp"
-        android:layout_height="108dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:onClick="goToBit"
         android:text="Crypto pricing"
+        app:layout_constraintBottom_toTopOf="@+id/btn"
         app:layout_constraintEnd_toStartOf="@+id/btn3"
         app:layout_constraintHorizontal_bias="0.357"
         app:layout_constraintStart_toStartOf="parent"
