--- a/app/src/main/res/layout/activity_exchange_crypto.xml
+++ b/app/src/main/res/layout/activity_exchange_crypto.xml
@@ -8,7 +8,7 @@
 
     <EditText
         android:id="@+id/et"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="7dp"
         android:layout_marginEnd="8dp"
@@ -17,6 +17,7 @@
         android:ems="10"
         android:hint="$"
         android:inputType="textPersonName"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/lv"
         app:layout_constraintEnd_toStartOf="@+id/spinner"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +26,7 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="7dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
