--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,10 @@
         android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/btn"
         android:background="#16A085"
-        android:onClick="goToBit"
+        android:onClick="goToAbout"
         android:text="About Us"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn3"
         app:layout_constraintStart_toStartOf="@+id/btn3"
@@ -49,6 +51,8 @@
         android:background="#16A085"
         android:onClick="goToWallet"
         android:text="Crypto wallet"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn2"
         app:layout_constraintStart_toStartOf="@+id/btn2"
@@ -67,6 +71,8 @@
         android:background="#16A085"
         android:onClick="goToConverter"
         android:text="Crypto converter"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btn4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn2"
@@ -85,6 +91,8 @@
         android:background="#16A085"
         android:onClick="goToBit"
         android:text="Crypto pricing"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btn"
         app:layout_constraintEnd_toStartOf="@+id/btn3"
         app:layout_constraintHorizontal_bias="0.357"
