final master commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,30 @@
     android:background="#1ABC9C"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="150dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_launcher_foreground" />
+
     <Button
         android:id="@+id/btn4"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_below="@+id/btn2"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/btn"
         android:background="#16A085"
+        android:fontFamily="monospace"
         android:onClick="goToAbout"
         android:text="About Us"
         android:textSize="18sp"
@@ -25,32 +40,18 @@
         app:layout_constraintStart_toStartOf="@+id/btn3"
         app:layout_constraintTop_toBottomOf="@+id/btn3" />
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="198dp"
-        android:layout_height="167dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="#1ABC9C"
-        android:src="@drawable/bitcoin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btn"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignStart="@+id/btn2"
         android:layout_below="@+id/btn2"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginTop="40dp"
         android:background="#16A085"
+        android:fontFamily="monospace"
         android:onClick="goToWallet"
-        android:text="Crypto wallet"
+        android:text="Wallet"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,20 +64,21 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignTop="@+id/btn2"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/btn2"
         android:background="#16A085"
+        android:fontFamily="monospace"
         android:onClick="goToConverter"
-        android:text="Crypto converter"
+        android:text="Converter"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btn4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn2"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn2"
@@ -84,19 +86,20 @@
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
         android:background="#16A085"
+        android:fontFamily="monospace"
         android:onClick="goToBit"
-        android:text="Crypto pricing"
+        android:text="Pricing"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/btn"
         app:layout_constraintEnd_toStartOf="@+id/btn3"
         app:layout_constraintHorizontal_bias="0.357"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
