--- a/app/src/main/res/layout/activity_crypto.xml
+++ b/app/src/main/res/layout/activity_crypto.xml
@@ -14,8 +14,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="#16A085"
+        android:fontFamily="monospace"
         android:onClick="addData"
         android:text="Submit"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/et"
