--- a/app/src/main/res/layout/activity_exchange_crypto.xml
+++ b/app/src/main/res/layout/activity_exchange_crypto.xml
@@ -15,9 +15,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:fontFamily="monospace"
         android:hint="$"
         android:inputType="textPersonName"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/spinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
