--- a/app/src/main/res/layout/activity_exchange_crypto.xml
+++ b/app/src/main/res/layout/activity_exchange_crypto.xml
@@ -31,6 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:background="#16A085"
         app:layout_constraintBottom_toBottomOf="@+id/et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
